[package]
name = "sunshine_helper"
version = "0.2.0"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.92"
chrono = "0.4.38"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_Devices_Display", "Win32_UI_ColorSystem"]
# TODO: restrict features to API functions needed (search here: https://microsoft.github.io/windows-rs/features/#/0.58.0)